--- a/client/index.html
+++ b/client/index.html
@@ -25,9 +25,12 @@
     <meta name="twitter:description" content="Streamline your warehouse operations with Dock Optimizer. Intelligent scheduling, real-time tracking, and automated notifications. Trusted by 50+ warehouses." />
     <meta name="twitter:image" content="/src/assets/dock_optimizer_logo.jpg" />
     
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/src/assets/dock_optimizer_logo.jpg" />
-    <link rel="apple-touch-icon" href="/src/assets/dock_optimizer_logo.jpg" />
+    <!-- Favicon - Proper setup with multiple formats -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#2563eb" />
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://dock-optimizer.com" />
