--- a/client/index.html
+++ b/client/index.html
@@ -76,7 +76,7 @@
     <div id="root"></div>
 
     <!-- Vite entry point -->
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
 
     <!-- Replit dev banner (only visible outside prod) -->
     <script
